# advanced-econometrics-project

./: .gitignore  README.md  dataviewing.ipynb  dynamic_factor_model_joint_evolution.ipynb  main.py  monthly_small_pca.ipynb  monthly_small_timing_bins.ipynb  pyproject.toml  replication_and_extension.ipynb  varlist.xlsx
