[project]
name = "econometricsproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyreadstat>=1.3.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
